--- a/src/UI/AppButton/AppButton.module.scss
+++ b/src/UI/AppButton/AppButton.module.scss
@@ -1,15 +1,23 @@
 .container {
-  padding: 4px 8px;
-  width: fit-content;
-  border-radius: 4px;
-  border: none;
+  font-size: large;
+  margin-left: 10px;
+  padding: 8px 16px;
+  outline: none;
+  background: none;
+  border-radius: 10px;
+  transition: 0.4s;
+  cursor: pointer;
 
   &.primary {
-    background-color: var(--primary-btn);
+    border: 1px solid var(--border-color);
+    color: var(--btn-color);
+    box-shadow: -4px -4px 7px var(--shadow1), 4px 4px 7px var(--shadow2);
   }
 
   &.secondary {
-    background-color: var(--secondary-btn);
+    border: 1px solid var(--green);
+    color: var(--btn-color);
+    box-shadow: -4px -4px 7px var(--shadow1), 4px 4px 7px var(--shadow2);
   }
 
   .list{
