--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,30 @@
-body {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
+:root {
+  font-family:poppins, sans-serif;
+  font-size: 16px;
+  line-height: 24px;
+
+
+  font-synthesis: none;
+  text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  -webkit-text-size-adjust: 100%;
+
+  /* colors */
+  --bg: #120722;
+  --text: #fff;
+  --border-color: #200648;
+  --border-hover: #430c94;
+  --btn-color: #b486f8;
+  --shadow1: #160122;
+  --shadow2: #0c0015;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+*{
+  box-sizing: border-box;
+}
+body {
+  background-color: var(--bg);
+  color: var(--text);
 }
