--- a/src/components/List/List.module.scss
+++ b/src/components/List/List.module.scss
@@ -4,4 +4,7 @@
   justify-content: center;
   flex-direction: column;
   width: 100%;
+  max-height: 50vh;
+  overflow-y: scroll;
+  padding: 12px;
 }
